2014-02-17  Radu Stavila  <stavila@adobe.com>

        [CSS Regions] Make regions unsplittable
        https://bugs.webkit.org/show_bug.cgi?id=128811

        Reviewed by David Hyatt.

        Added test for checking that nested regions are unsplittable.

        * fast/regions/unsplittable-nested-region-expected.html: Added.
        * fast/regions/unsplittable-nested-region.html: Added.

2014-02-17  Simon Fraser  <simon.fraser@apple.com>

        Graphics buffer issue with clip-path and fixed positioned element
        https://bugs.webkit.org/show_bug.cgi?id=126262

        Reviewed by Tim Horton.

        * compositing/contents-opaque/opaque-with-clip-path-expected.html: Added.
        * compositing/contents-opaque/opaque-with-clip-path.html: Added.

2014-02-17  Radu Stavila  <stavila@adobe.com>

        [CSS Regions] The box decorations of an element overflowing a region should be clipped at the border box, not the content box
        https://bugs.webkit.org/show_bug.cgi?id=128815

        Reviewed by Andrei Bucur.

        Added tests for the painting of the borders of elements flowed into regions
        over the region's padding area, for regions with overflow:hidden.
        Tests were added for all writing modes.

        * fast/regions/box-decorations-over-region-padding-expected.html: Added.
        * fast/regions/box-decorations-over-region-padding-fragmented-expected.html: Added.
        * fast/regions/box-decorations-over-region-padding-fragmented.html: Added.
        * fast/regions/box-decorations-over-region-padding-horiz-bt-expected.html: Added.
        * fast/regions/box-decorations-over-region-padding-horiz-bt.html: Added.
        * fast/regions/box-decorations-over-region-padding-vert-lr-expected.html: Added.
        * fast/regions/box-decorations-over-region-padding-vert-lr.html: Added.
        * fast/regions/box-decorations-over-region-padding-vert-rl-expected.html: Added.