@@ -1,15 +1,11 @@
 <style>
 #parent {
+    width: 500px;
 	height: 200px;
 	margin: 20px;
 	background: blue;
 	border: solid red 20px;
-	-webkit-clip-path: circle(50%, 50%, 50%);
-	outline: 1px solid transparent;
-}
-
-.composited {
-  -webkit-transform: translateZ(0);
+	-webkit-clip-path: rectangle(50px, 0, 80%, 100%) border-box;
 }
 </style>
-<div id="parent" class="composited"></div>
+<div id="parent"></div>
