@@ -1,10 +1,11 @@
 <style>
 #parent {
+    width: 500px;
 	height: 200px;
 	margin: 20px;
 	background: blue;
 	border: solid red 20px;
-	-webkit-clip-path: circle(50%, 50%, 50%);
+	-webkit-clip-path: rectangle(50px, 0, 80%, 100%) border-box;
 }
 
 .composited {
